db context added

--- a/CarRent.API/appsettings.json
+++ b/CarRent.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ZbwCarrentContext": "Server=RAPHAEL\\SQLSERVER_RS;Database=CarRent;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
