--- a/CarRent.API/appsettings.json
+++ b/CarRent.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ZbwCarrentContext": "Server=RAPHAEL\\SQLSERVER_RS;Database=CarRent;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ZbwCarrentContext": "Server=RAPHAEL\\SQLSERVER_RS;Database=CarRent;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
   }
 }
